--- a/sklepApp/templates/user_create_form.html
+++ b/sklepApp/templates/user_create_form.html
@@ -11,7 +11,9 @@
     <form method="post">
         {% csrf_token %}
         <table> {{ form }} </table>
-        <input type="submit" value="Dodaj", class="dodaj">
+        <input type="submit" value="Dodaj" class="dodaj">
+        <button type="button" class="anuluj" onclick="window.location.href='/user/'">Anuluj</button>
+
     </form>
     {% endblock %}
 </body>
