20-03-2022 filtrowanie po kategorii

--- a/sklepApp/templates/kategoria.html
+++ b/sklepApp/templates/kategoria.html
@@ -21,7 +21,7 @@
                 {% for kategoria in kategorie %}
                 <td> {{ kategoria.id }}</td>
                 <td> {{ kategoria.nazwa }}</td>
-                <td> <button type="submit" class="pokaz" onclick="window.location.href='/kategoria/filtr'">Pokaż</button> </td>
+                <td> <button type="submit" class="pokaz" onclick="window.location.href='/kategoria/filtr/'">Pokaż</button> </td>
                 <td> <button type="submit" class="pokaz" onclick="window.location.href='/kategoria/delete/'">Usuń</button> </td>
                 <td> <button type="submit" class="pokaz" onclick="window.location.href='/kategoria/update'">Zmień</button> </td>
             </tr>
