--- a/sklepApp/templates/produkt_create_form.html
+++ b/sklepApp/templates/produkt_create_form.html
@@ -11,7 +11,9 @@
     <form method="post">
         {% csrf_token %}
         <table> {{ form }} </table>
-        <input type="submit" value="Dodaj", class="dodaj">
+        <input type="submit" value="Dodaj", class="dodaj" >
+        <input type="submit" value="Anuuj" class="dodaj" onclick="window.location.href='/produkt/'">
+
     </form>
     {% endblock %}
 </body>
