--- a/sklepApp/templates/produkt_select_form.html
+++ b/sklepApp/templates/produkt_select_form.html
@@ -12,7 +12,7 @@
             {% csrf_token %}
             <table> {{ form }} </table>
             <input type="submit" value="Wybierz" class="wybierz">
-            <input type="submit" value="Anuluj" onclick="window.location.href='/produkt/';" class="wybierz">
+            <input type="submit" value="Anuluj" onclick="window.location.href='/produkt/'" class="wybierz">
         </form>
     {% endblock %}
 </body>
