--- a/sklepApp/templates/user.html
+++ b/sklepApp/templates/user.html
@@ -7,10 +7,10 @@
 <body>
 {% extends 'base.html' %}
 {% block content %}
-<h2>Urzytkownicy:</h2>
+<h2>Użytkownicy:</h2>
         <table border="1" bgcolor="pink" style="border-top-style:double; border-color:yellow; color:darkblue">
             <tr>
-                <td colspan="11"  style="text-align:right" > <input type="submit" class="dodaj" value="Dodaj nowego urzytkownika" onclick="window.location.href='/user/create'"></td>
+                <td colspan="11"  style="text-align:right" > <input type="submit" class="dodaj" value="Dodaj nowego użytkownika" onclick="window.location.href='/user/create'"></td>
             </tr>
 
             <tr>
