--- a/sklepApp/templates/produkt.html
+++ b/sklepApp/templates/produkt.html
@@ -16,7 +16,10 @@
 
         <table border="1" bgcolor="pink" style="border-top-style:double; border-color:yellow; color:darkblue">
             <tr>
-                <td colspan="10"  style="text-align:right" > <input type="submit" class="dodaj" value="Dodaj nowy produkt"></td>
+                <td colspan="10"  style="text-align:right" >
+                    <button type="button" class="dodaj" >Dodaj nowy produkt</button>
+                    <button type="button" class="dodaj" onclick="window.location.href='/kategoria/filtr/'">Filtruj po kategorii</button>
+                </td>
             </tr>
             <tr>
                 <th>id</th>
@@ -24,7 +27,7 @@
                 <th>KATEGORIA</th>
                 <th>OPIS</th>
                 <th>path</th>
-                <th>ZDJECIE 1</th>
+                <th>ZDJECIE stałe</th>
                 <th>ZDJECIE 2</th>
                 <th>ILOŚĆ</th>
                 <th>CENA</th>
