--- a/sklepApp/templates/user_delete_form.html
+++ b/sklepApp/templates/user_delete_form.html
@@ -7,7 +7,7 @@
 <body>
     {% extends 'base.html' %}
     {% block content %}
-    <h2>Usówanie urzytkowników:</h2>
+    <h2>Usuwanie użytkowników:</h2>
     <form method="post">
         {% csrf_token %}
         <h3>Jestes pewien, że chcesz usunąć: "{{ object }}" z bazy?</h3>
