--- a/sklepApp/templates/user_select_form.html
+++ b/sklepApp/templates/user_select_form.html
@@ -7,7 +7,7 @@
 <body>
     {% extends 'base.html' %}
     {% block content %}
-    <h2 style="color:red">Wybór urzytkowników</h2>
+    <h2 style="color:red">Wybór użytkowników</h2>
         <form method="post">
             {% csrf_token %}
             <table> {{ form }} </table>
