23-03-2022 forms.py produkt : wigets w data modyfikacji

--- a/sklepApp/templates/produkt.html
+++ b/sklepApp/templates/produkt.html
@@ -17,8 +17,8 @@
         <table border="1" bgcolor="pink" style="border-top-style:double; border-color:yellow; color:darkblue">
             <tr>
                 <td colspan="10"  style="text-align:right" >
-                    <button type="button" class="dodaj" >Dodaj nowy produkt</button>
-                    <button type="button" class="dodaj" onclick="window.location.href='/kategoria/filtr/'">Filtruj po kategorii</button>
+                    <button type="button" class="dodaj" onclick="window.location.href='/produkt/create'"> Dodaj nowy produkt </button>
+                    <button type="button" class="dodaj" onclick="window.location.href='/kategoria/filtr/'"> Filtruj po kategorii </button>
                 </td>
             </tr>
             <tr>
@@ -28,7 +28,7 @@
                 <th>OPIS</th>
                 <th>path</th>
                 <th>ZDJECIE stałe</th>
-                <th>ZDJECIE 2</th>
+                <th>ZDJECIE wybrane</th>
                 <th>ILOŚĆ</th>
                 <th>CENA</th>
 
