--- a/sklepApp/templates/produkt_form.html
+++ b/sklepApp/templates/produkt_form.html
@@ -8,7 +8,7 @@
     {% extends 'base.html' %}
     {% block content %}
     <h2>Modyfikacja produktu:</h2>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <table> {{ form }} </table>
         <input type="submit" value="Zmien", class="dodaj">
